# ShopBackend

./: TODO.txt
scripts/: build.sh  environment.sh
source/: CMakeLists.txt  main.cpp
source/Parser/: Parser.h
source/REST/: RestServer.cpp  RestServer.h
source/SQLDriver/: CommunicationManager.cpp  CommunicationManager.h  SQLDriver.cpp  SQLDriver.h
